tests/valid/test_array_54.wyal
assert "postcondition not satisfied":
    forall (int[] ls, int j):
        if:
            |ls| == 0
        then:
            ls == [0;0]