tests/invalid/test_025.wyal
assert "postcondition not satisfied":
    forall (int[] ls):
        if:
            |ls| > 1
        then:
            ls == [1]